# OxHorseConnecter

./: .env.example  .env.production.example  .gitignore  CHANGELOG.en.md  CHANGELOG.md  README.en.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  快速启动.md
apps/ai-service/: README.md  pyproject.toml
apps/ai-service/app/: __init__.py  analysis.py  main.py  rag.py
apps/ai-service/tests/: test_analysis.py  test_rag.py
docs/: Caddyfile.example  README.en.md  README.md  agent-workbench-acceptance.md  agent-workbench.md  api.md  architecture.md  claude-code-workbench-quickstart.md  deployment-guide.md  documentation-guide.en.md  documentation-guide.md  nginx-rac-proxy.snippet.conf  nginx.conf.example  production-deployment.md  rac-remote-worker.service.example  roadmap.en.md  roadmap.md  security.md  workbench-regression-matrix.md
e2e/: agent-workbench-mock.spec.ts  agent-workbench-real.spec.ts  agent-workbench.spec.ts
scripts/: backup-db.ps1  configure-telegram.ps1  dev-host.sh  dev-web.sh  dev.ps1  health-check.ps1  init-db.sh  install-remote-worker-service.ps1  load-test.mjs  setup.ps1  start-common.ps1  start.ps1  sync-public.ps1  test-integration.ps1  test-workbench-e2e.ps1
tests/: agent-event-mapper.test.ts  agent-native-routes.test.ts  agent-route-utils.test.ts  claude-agent-sdk-executor.test.ts  claude-code-stream-parser.test.ts  codex-app-server-executor.test.ts  codex-event-parser.test.ts  command-result-ui.test.ts  config-page-schema.test.ts  control-plane-foundation.test.ts  executor-mode-args.test.mjs  log-file.test.ts  (+21 more)
(+252 files in other folders)
